example/bookstore/envoy/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  #prefix: "/"
                  prefix: "/force-host-rewrite"
                route:
                  #host_rewrite_literal: www.envoyproxy.io
                  #cluster: service_envoyproxy_io
                  cluster: dynamic_forward_proxy_cluster
                typed_per_filter_config:
                  envoy.filters.http.dynamic_forward_proxy:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                    host_rewrite_literal: www.example.org
              - match:
                  prefix: "/"
                route:
                  cluster: dynamic_forward_proxy_cluster
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: dynamic_forward_proxy_cluster
    connect_timeout: 30s
    #type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: CLUSTER_PROVIDED
    # lb_policy: ROUND_ROBIN
    # load_assignment:
    #   cluster_name: dynamic_forward_proxy_cluster
    #   endpoints:
    #   - lb_endpoints:
    #     - endpoint:
    #         address:
    #           socket_address:
    #             address: www.nghttp2.org
    #             port_value: 4433
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
        allow_insecure_cluster_options: true
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http3_protocol_options: {allow_extended_connect: true}
        common_http_protocol_options:
          idle_timeout: 1s
    transport_socket:
      name: envoy.transport_sockets.quic
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
        upstream_tls_context:
          # sni: www.nghttp2.org
          #sni: demo.http3.page
          #sni: bookstore.bookstore.svc.cluster.local
          sni: frontend-quic.mdemo.svc.cluster.local
          # sni: www.youtube.com
          #  common_tls_context:
          #    validation_context:
          #      trusted_ca: {filename: /etc/ssl/certs/ca-certificates.crt}
#  - name: service_envoyproxy_io
#    connect_timeout: 30s
#    type: LOGICAL_DNS
#    # Comment out the following line to test on v6 networks
#    dns_lookup_family: V4_ONLY
#    lb_policy: ROUND_ROBIN
#    load_assignment:
#      cluster_name: service_envoyproxy_io
#      endpoints:
#      - lb_endpoints:
#        - endpoint:
#            address:
#              socket_address:
#                address: www.envoyproxy.io
#                port_value: 443
#    transport_socket:
#      name: envoy.transport_sockets.tls
#      typed_config:
#        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
#        sni: www.envoyproxy.io
